FunArray: Fix pipeline